--- a/source/_views/base.twig
+++ b/source/_views/base.twig
@@ -1,6 +1,10 @@
 <html>
     <head>
-        <title>{{ site.title }} &emdash; {{ page.title }}</title>
+        {% if page.title %}
+        <title>{{ page.title }} &mdash; {{ site.title }}</title>
+        {% else %}
+        <title>{{ site.title }}</title>
+        {% endif %}
         <meta name="author" content="{{ site.author }}">
         <link href="{{site.url}}/atom.xml" rel="alternate" title="{{ site.title }}" type="application/atom+xml">
         <link rel="icon" href="{{site.url}}/favicon.ico">
