--- a/source/_views/base.twig
+++ b/source/_views/base.twig
@@ -6,6 +6,7 @@
         <title>{{ site.title }}</title>
         {% endif %}
         <meta name="author" content="{{ site.author }}">
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
         <link href="{{site.url}}/atom.xml" rel="alternate" title="{{ site.title }}" type="application/atom+xml">
         <link rel="icon" href="{{site.url}}/favicon.ico">
     </head>
@@ -20,7 +21,9 @@
                 </ul>
             </navigation>
         </header>
-        {% block content %}Fallback content.{% endblock %}
+        {% block content_wrapper %}
+        {% block content %}Nothing to see here.{% endblock %}
+        {% endblock %}
         <footer>
             <navigation>
                 <ul>
