--- a/source/_views/post.twig
+++ b/source/_views/post.twig
@@ -14,6 +14,6 @@
 {% endif %}
 </nav>
 {% endif %}
-{% block content %}stuff{% endblock %}
+{% block content %}Nothing to see here.{% endblock %}
 
 {% endblock %}
