--- a/source/_views/post.twig
+++ b/source/_views/post.twig
@@ -14,6 +14,7 @@
 {% endif %}
 </nav>
 {% endif %}
+<h1>{{ page.title }}</h1>
 {% block content %}Nothing to see here.{% endblock %}
 
 {% endblock %}
