--- a/source/_views/base.twig
+++ b/source/_views/base.twig
@@ -1,36 +1,79 @@
-<html>
-    <head>
-        {% if page.title %}
-        <title>{{ page.title }} &mdash; {{ site.title }}</title>
-        {% else %}
-        <title>{{ site.title }}</title>
-        {% endif %}
-        <meta name="author" content="{{ site.author }}">
-        <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-        <link href="{{site.url}}/atom.xml" rel="alternate" title="{{ site.title }}" type="application/atom+xml">
-        <link rel="icon" href="{{site.url}}/favicon.ico">
-    </head>
-    <body>
-        <header>
-            <h1>{{ site.title }}</h1>
-            <h2>{{ site.subtitle }}</h2>
-            <navigation>
+<!doctype html>
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    {% if page.full_title %}
+    <title>{{ page.full_title|raw }}</title>
+    {% elseif page.title %}
+    <title>{{ page.title }} &mdash; {{ site.title }}</title>
+    {% else %}
+    <title>{{ site.title }}</title>
+    {% endif %}
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="author" content="{{ site.author }}">
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <link href="{{site.url}}/atom.xml" rel="alternate" title="{{ site.title }}" type="application/atom+xml">
+    <link rel="stylesheet" href="{{ site.url }}/css/boilerplate.css">
+    <link rel="stylesheet" href="{{ site.url }}/css/style.css">
+    <link rel="stylesheet" href="{{ site.url }}/css/helpers.css">
+    <link rel="icon" href="{{ site.url }}/favicon.ico">
+    <link href='http://fonts.googleapis.com/css?family=Nunito:400,700|PT+Serif:regular,italic,bold,bolditalic|PT+Sans:regular,italic,bold,bolditalic' rel='stylesheet' type='text/css'>
+    <script src="{{ site.url }}/js/libs/modernizr-2.0.6.min.js"></script>
+</head>
+<body>
+    <header class="site">
+        <div class="info">
+            <hgroup>
+                <h1><a href="{{ site.url }}">{{ site.title }}</a></h1>
+                <h2>{{ site.subtitle }}</h2>
+            </hgroup>
+        </div>
+    </header>
+    <div class="mainContentContainer">
+        <div class="mainContent">
+            {% block content_wrapper %}
+            {% block content %}Nothing to see here.{% endblock %}
+            {% endblock %}
+        </div>
+    </div>
+    <footer class="site">
+        <div class="details">
+            <div class="socialMedia">
                 <ul>
-                    <li><a href="{{site.url}}/">Blog</a></li>
-                    <li><a href="{{site.url}}/blog/archives">Archives</a></li>
+                    <li class="twitter"><a href="http://twitter.com/srcmvn">@srcmvn</a></li>
                 </ul>
-            </navigation>
-        </header>
-        {% block content_wrapper %}
-        {% block content %}Nothing to see here.{% endblock %}
-        {% endblock %}
-        <footer>
-            <navigation>
-                <ul>
-                    <li><a href="{{site.url}}/">Blog</a></li>
-                    <li><a href="{{site.url}}/blog/archives">Archives</a></li>
-                </ul>
-            </navigation>
-        </footer>
-    </body>
+            </div>
+            <div class="copyright">
+                &copy;<a href="{{ site.url }}/author/beau">Beau Simensen</a>, 2011-2012
+            </div>
+        </div>
+    </footer>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="{{site.url}}/js/libs/jquery-1.6.4.min.js"><\/script>')</script>
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) {return;}
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/all.js#appId=212934732101925&xfbml=1";
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+    <script defer src="{{ site.url }}/js/plugins.js"></script>
+    <script defer src="{{ site.url }}/js/script.js"></script>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-12685022-2']);
+      _gaq.push(['_trackPageview']);
+    
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+  </script>
+</body>
 </html>
