--- a/source/_views/post.twig
+++ b/source/_views/post.twig
@@ -41,10 +41,9 @@
     </section>
  </footer>
 <script type="text/javascript">
-    var disqus_developer = 1;
     var disqus_shortname = 'srcmvn';
-    var disqus_identifier = '{{ site.url }}{{ page.url }}';
-    var disqus_url = '{{ site.url }}{{ page.url }}';
+    var disqus_identifier = '{{ site.url }}{{ page.url }}/';
+    var disqus_url = '{{ site.url }}{{ page.url }}/';
     var disqus_script = 'embed.js';
     (function () {
       var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
