--- a/source/_views/base.twig
+++ b/source/_views/base.twig
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="{{ site.url }}/css/helpers.css">
     <link rel="icon" href="{{ site.url }}/favicon.ico">
     <link href='http://fonts.googleapis.com/css?family=Nunito:400,700|PT+Serif:regular,italic,bold,bolditalic|PT+Sans:regular,italic,bold,bolditalic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="{{ site.url }}/js/libs/highlight/styles/github.css">
     <script src="{{ site.url }}/js/libs/modernizr-2.0.6.min.js"></script>
 </head>
 <body>
@@ -75,5 +76,7 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
   </script>
+  <script src="{{ site.url }}/js/libs/highlight/highlight.pack.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
