--- a/source/_views/post.twig
+++ b/source/_views/post.twig
@@ -43,7 +43,7 @@
     <a class="previous" href="{{ site.url }}{{ page.previousPost.url }}" title="{{ page.previousPost.title }}"><span class="title">{{ page.previousPost.title }}</span></a>
     {% endif %}
     {% if page.nextPost %}
-    <a class="next" href="{{ site.url }}{{ page.nextPost.url }}" title="{{ page.previousPost.title }}"><span class="title">{{ page.nextPost.title }}</span></a>
+    <a class="next" href="{{ site.url }}{{ page.nextPost.url }}" title="{{ page.nextPost.title }}"><span class="title">{{ page.nextPost.title }}</span></a>
     {% endif %}
     </nav>
 {% endif %}
