--- a/source/_views/base.twig
+++ b/source/_views/base.twig
@@ -44,6 +44,7 @@
         <div class="details">
             <div class="socialMedia">
                 <ul>
+                    <li class="twitter"><a href="http://twitter.com/beausimensen">@beausimensen</a></li>
                     <li class="twitter"><a href="http://twitter.com/srcmvn">@srcmvn</a></li>
                 </ul>
             </div>
