--- a/source/author/beau.twig
+++ b/source/author/beau.twig
@@ -10,3 +10,35 @@ Writer of the ever so humbly named [Source Maven](http://srcmvn.com) blog.
 Often falls into the [Not Invented Here](http://not-invented-here.com) trap.
 Sometimes goes by [Kir Kryyn](http://kirkryyn.com). Founded
 [Dragonfly Development](http://dflydev.com) and [Offloc](http://offloc.com).
+
+Are you looking for my [resume](http://beausimensen.com/resume)?
+
+
+## Social Media
+
+You can find me on Twitter as [@beausimensen](https://twitter.com/beausimensen)
+and you can find me on Tent as [^simensen.tent.is](https://simensen.tent.is).
+I'm on Facebook but that is mostly for friends and family. :)
+
+
+## IRC
+
+I idle in several IRC channels on **irc.freenode.net**. Look for **simensen**
+in **#silex-php**, **#symfony**, **#symfony-dev**, **#composer-dev**, **#sculpin**,
+or **#dflydev**.
+
+
+## Notable Software Projects
+
+ * [Sculpin](http://sculpin.io) &mdash; A PHP Static Site Generator.
+ * [git-subsplit](https://github.com/dflydev/git-subsplit) &mdash; Automates and
+   simplifies the process of managing one-way read-only subtree splits.
+
+
+## Software
+
+Most of my code lives under the [dflydev](https://github.com/dflydev) organization
+but you can find other stuff under the [offloc](https://github.com/offloc)
+organization, [sculpin](https://github.com/sculpin) organization, or mostly
+forks of other projects under my personal [simensen](https://github.com/simensen)
+account.
