Change social media link behavior because added ^simensen.tent.is link.

--- a/source/_views/base.twig
+++ b/source/_views/base.twig
@@ -44,12 +44,13 @@
         <div class="details">
             <div class="socialMedia">
                 <ul>
-                    <li class="twitter"><a href="http://twitter.com/beausimensen">@beausimensen</a></li>
-                    <li class="twitter"><a href="http://twitter.com/srcmvn">@srcmvn</a></li>
+                    <li class="tent"><a href="https://simensen.tent.is">^simensen.tent.is</a></li>
+                    <li class="twitter"><a href="https://twitter.com/beausimensen">@beausimensen</a></li>
+                    <li class="twitter"><a href="https://twitter.com/srcmvn">@srcmvn</a></li>
                 </ul>
             </div>
             <div class="copyright">
-                &copy;<a href="{{ site.url }}/author/beau">Beau Simensen</a>, 2011-2012
+                &copy; 2011 <a href="{{ site.url }}/author/beau">Beau Simensen</a>
             </div>
         </div>
     </footer>
