--- a/source/_views/base.twig
+++ b/source/_views/base.twig
@@ -77,7 +77,24 @@
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
-  </script>
+    </script>
+    <script type="text/javascript">
+      var GoSquared = {};
+      GoSquared.acct = "GSN-272988-L";
+      (function(w){
+        function gs(){
+          w._gstc_lt = +new Date;
+          var d = document, g = d.createElement("script");
+          g.type = "text/javascript";
+          g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";
+          var s = d.getElementsByTagName("script")[0];
+          s.parentNode.insertBefore(g, s);
+        }
+        w.addEventListener ?
+          w.addEventListener("load", gs, false) :
+          w.attachEvent("onload", gs);
+      })(window);
+    </script>
   <script src="{{ site.url }}/js/libs/highlight/highlight.pack.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
 </body>
