--- a/source/_views/base.twig
+++ b/source/_views/base.twig
@@ -15,6 +15,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="author" content="{{ site.author }}">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <meta name="generator" content="sculpin.io" />
     <link href="{{site.url}}/atom.xml" rel="alternate" title="{{ site.title }}" type="application/atom+xml">
     <link rel="stylesheet" href="{{ site.url }}/css/boilerplate.css">
     <link rel="stylesheet" href="{{ site.url }}/css/style.css">
