--- a/source/css/style.css
+++ b/source/css/style.css
@@ -307,6 +307,11 @@ blockquote {
     overflow: hidden;
 }
 
+.entryContent img {
+    max-width: 100%;
+    height: auto;
+}
+
 .video-container iframe,
 .video-container object,
 .video-container embed {
