--- a/source/_views/post.twig
+++ b/source/_views/post.twig
@@ -1,5 +1,35 @@
 {% extends "base.twig" %}
 {% set lead_info %}{% block lead_info %}{% endblock %}{% endset %}
+{% block metaTags %}
+    <meta name="robots" content="index, follow">
+
+    <!-- Facebook -->
+    <meta property="og:title" content="{{ page.title }}" />
+    <meta property="og:type" content="article" />
+    {% if page.social_image %}
+        <meta property="og:image" content="{{ site.url }}{{ page.social_image }}" />
+    {% elseif page.cover_image %}
+        <meta property="og:image" content="{{ site.url }}{{ page.cover_image }}" />
+    {% endif %}
+    <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+    <meta property="og:description" content="{{ page.blocks.content|raw|striptags|split(' ')|slice(0,50)|join(' ') }} ..." />
+    <meta property="article:author" content="https://www.facebook.com/simensen" />
+    <meta property="article:publisher" content="https://www.facebook.com/pages/Source-Maven/273720759729" />
+    {% if page.social_image %}
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:image:src" content="{{ site.url }}{{ page.social_image }}">
+    {% elseif page.cover_image %}
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:image:src" content="{{ site.url }}{{ page.cover_image }}">
+    {% else %}
+        <meta name="twitter:card" content="summary" />
+    {% endif %}
+    <meta name="twitter:site" content="@srcmvn" />
+    <meta name="twitter:creator" content="@beausimensen" />
+    <meta name="twitter:title" content="{{ page.title }}" />
+    <meta name="twitter:description" content="{{ page.blocks.content|raw|striptags|split(' ')|slice(0,50)|join(' ') }} ..." />
+    <meta name="twitter:url" content="{{ site.url }}{{ page.url }}" />
+{% endblock %}
 {% block content_wrapper %}
 <article class="post {% if lead_info is empty %}noLeadInfo{% else %}hasLeadInfo{% endif %}">
 <header class="post-article">
@@ -10,6 +40,9 @@
 <div class="leadInfo">
 {{ lead_info }}
 </div>
+{% endif %}
+{% if page.cover_image %}
+<img src="{{ site.url }}{{ page.cover_image }}">
 {% endif %}
 {% block content %}Nothing to see here.{% endblock %}
 </div>
