--- a/source/author/beau.twig
+++ b/source/author/beau.twig
@@ -6,39 +6,35 @@ converters: ["markdown"]
 
 # Beau Simensen
 
-Writer of the ever so humbly named [Source Maven](http://srcmvn.com) blog.
-Often falls into the [Not Invented Here](http://not-invented-here.com) trap.
-Sometimes goes by [Kir Kryyn](http://kirkryyn.com). Founded
-[Dragonfly Development](http://dflydev.com) and [Offloc](http://offloc.com).
+Beau Simensen (<a href="https://twitter.com/beausimensen">@beausimensen</a>,
+<a href="https://beau.io">beau.io</a>) has been a professional polyglot
+programmer since 1998. He owns dflydev (<a href="http://dflydev.com">dflydev.com</a>),
+a consulting company, and is co-host of That Podcast
+(<a href="https://twitter.com/thatpodcast">@thatpodcast</a>,
+<a href="http://thatpodcast.io">thatpodcast.io</a>).
 
-Are you looking for my [resume](http://beausimensen.com/resume)?
+An active open-sourcer, Beau created Sculpin
+(<a href="https://sculpin.io">sculpin.io</a>) and helped create Stack PHP
+(<a href="http://stackphp.com">stackphp.com</a>). He is also the Sculpin
+representative to the PHP Framework Interoperability Group (PHP-FIG).
 
+Beau is a proponent of framework agnostic code. Unglue all the things!
+
+What to see my talks? Visit [beau.io](https://beau.io/talks).
 
 ## Social Media
 
-You can find me on Twitter as [@beausimensen](https://twitter.com/beausimensen)
-and you can find me on Tent as [^simensen.tent.is](https://simensen.tent.is).
-I'm on Facebook but that is mostly for friends and family. :)
+You can find me on Twitter as [@beausimensen](https://twitter.com/beausimensen).
+You can find me on Facebook as [simensen](https://www.facebook.com/simensen).
 
 
 ## IRC
 
 I idle in several IRC channels on **irc.freenode.net**. Look for **simensen**
 in **#silex-php**, **#symfony**, **#symfony-dev**, **#composer-dev**, **#sculpin**,
-or **#dflydev**.
+**#thatpodcast**, or **#dflydev**.
 
 
 ## Notable Software Projects
 
  * [Sculpin](http://sculpin.io) &mdash; A PHP Static Site Generator.
- * [git-subsplit](https://github.com/dflydev/git-subsplit) &mdash; Automates and
-   simplifies the process of managing one-way read-only subtree splits.
-
-
-## Software
-
-Most of my code lives under the [dflydev](https://github.com/dflydev) organization
-but you can find other stuff under the [offloc](https://github.com/offloc)
-organization, [sculpin](https://github.com/sculpin) organization, or mostly
-forks of other projects under my personal [simensen](https://github.com/simensen)
-account.
