--- a/source/_views/base.twig
+++ b/source/_views/base.twig
@@ -35,6 +35,7 @@
               <li class="Beau_Navigation__Menu_Item"><a href="https://beau.io" class="Beau_Navigation__Menu_Link">Home</a></li>
               <li class="Beau_Navigation__Menu_Item"><a href="https://beau.io/talks" class="Beau_Navigation__Menu_Link">Talks</a></li>
               <li class="Beau_Navigation__Menu_Item"><a href="https://beau.io/blogs" class="Beau_Navigation__Menu_Link">Blogs</a></li>
+              <li class="Beau_Navigation__Menu_Item"><a href="https://beau.io/introduction-to-event-sourcing-and-cqrs-with-php" class="Beau_Navigation__Menu_Link">Book</a></li>
               <li class="Beau_Navigation__Menu_Item"><a href="https://thatpodcast.io" class="Beau_Navigation__Menu_Link">That Podcast</a></li>
           </ul>
       </div>
