--- a/source/_views/base.twig
+++ b/source/_views/base.twig
@@ -30,13 +30,14 @@
 <body>
   <nav id="primary-navigation" class="Beau_Navigation">
       <div class="Beau_Navigation__Content_Container">
-          <a href="https://beau.io" class="Beau_Navigation__Logo Beau_Navigation__Menu_Link">Beau Simensen</a>
+          <a href="https://beausimensen.com" class="Beau_Navigation__Logo Beau_Navigation__Menu_Link">Beau Simensen</a>
           <ul class="Beau_Navigation__Menu">
-              <li class="Beau_Navigation__Menu_Item"><a href="https://beau.io" class="Beau_Navigation__Menu_Link">Home</a></li>
-              <li class="Beau_Navigation__Menu_Item"><a href="https://beau.io/talks" class="Beau_Navigation__Menu_Link">Talks</a></li>
-              <li class="Beau_Navigation__Menu_Item"><a href="https://beau.io/blogs" class="Beau_Navigation__Menu_Link">Blogs</a></li>
-              <li class="Beau_Navigation__Menu_Item"><a href="https://beau.io/introduction-to-event-sourcing-and-cqrs-with-php" class="Beau_Navigation__Menu_Link">Book</a></li>
-              <li class="Beau_Navigation__Menu_Item"><a href="https://thatpodcast.io" class="Beau_Navigation__Menu_Link">That Podcast</a></li>
+              <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/services" class="Beau_Navigation__Menu_Link">Services</a></li>
+              <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/talks" class="Beau_Navigation__Menu_Link">Talks</a></li>
+              <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/blogs" class="Beau_Navigation__Menu_Link">Blogs</a></li>
+              <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/books" class="Beau_Navigation__Menu_Link">Books</a></li>
+              <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/podcasts" class="Beau_Navigation__Menu_Link">Podcasts</a></li>
+              <li class="Beau_Navigation__Menu_Item"><a href="https://beausimensen.com/services" class="Beau_Navigation__Menu_Link"><strong>Hire Me</strong></a></li>
           </ul>
       </div>
   </nav>
